# job-hunter

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt  run_bot.py  seed.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  database.py  main.py
app/api/v1/: jobs.py  profile.py  router.py
app/extractors/: text_parser.py  url_extractor.py
app/llm/: client.py  prompts.py
app/models/: __init__.py  analysis.py  job.py  profile.py
app/schemas/: analysis.py  job.py  profile.py
app/scoring/: fit_scorer.py
app/services/: analysis_service.py  job_service.py  profile_service.py
app/telegram/: bot.py  formatters.py  handlers.py  keyboards.py
app/utils/: errors.py  logging.py
tests/: conftest.py  test_api.py  test_extraction.py  test_fit_scorer.py
